--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -996,12 +996,16 @@
 }
 
 .contact-slider {
+    padding-bottom: 102px;
+
     &__link {
         position: relative;
+        margin-bottom: 20px;
+
         &:hover {
-            .contact-slider__title{
-              opacity: 1;  
-        }
+            .contact-slider__title {
+                opacity: 1;
+            }
         }
     }
 
@@ -1009,6 +1013,10 @@
         width: 170px;
         height: 170px;
         object-fit: cover;
+    }
+
+    .slick-slide+.slick-slide {
+        margin-left: 18px;
     }
 
     &__title {
@@ -1030,5 +1038,125 @@
         opacity: 0;
         background: rgba(#fff, 0.6);
 
+    }
+}
+
+.blog {
+    padding: 60px 0 100px;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__category {
+        margin-bottom: 36px;
+    }
+
+    &__category-title,
+    &__tags-title {
+        margin-bottom: 16px;
+        color: $title;
+        @extend%title-font;
+        line-height: 23px;
+    }
+
+    &__category-item {
+        margin-bottom: 12px;
+    }
+
+    &__category-link {
+        color: $default;
+    }
+
+    &__tags {
+        margin-bottom: 50px;
+    }
+
+    &__tags-links {
+        font-size: 14px;
+        font-weight: 600;
+        margin-bottom: 10px;
+        margin-right: 10px;
+        display: inline-block;
+        border-radius: 14px;
+        padding: 0 16px;
+        border: 1px solid rgba(#454647, 0.5);
+        color: #8F8D8D;
+    }
+    &__social{
+        display: flex;
+    }
+    &__social-item{
+        margin-right: 20px;
+    }
+
+}
+
+.recent-posts {
+    margin-bottom: 40px;
+
+    &__title {
+        margin-bottom: 24px;
+        color: $title;
+        @extend%title-font;
+        line-height: 23px;
+    }
+
+    &__item {
+        margin-bottom: 11px;
+    }
+
+    &__item-title {
+        color: inherit;
+        display: block;
+    }
+
+    &__date {
+        &::after {
+            content: '|';
+        }
+    }
+
+    &__date,
+    &__author {
+        color: #A1A1A1;
+        font-size: 14px;
+    }
+
+}
+
+.aside {
+    width: 350px;
+    margin-left: 30px;
+
+    &__form {
+        position: relative;
+        margin-bottom: 40px;
+
+    }
+
+    &__form-input {
+        padding: 6px 45px 6px 18px;
+        border: 1px solid rgba($title, 0.7);
+        border-radius: 20px;
+        display: block;
+        width: 100%;
+
+        &::placeholder {
+            color: #A1A1A1;
+            font-size: 14px;
+            line-height: 27px;
+            font-weight: 400;
+            font-family: 'OpenSans', sans-serif;
+        }
+    }
+
+    &__form-btn {
+        position: absolute;
+        border: none;
+        background-color: transparent;
+        top: 10px;
+        right: 17px;
     }
 }
